--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,7 @@
 
     <string name="app_name">LoTieneElGatoAPP</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_activity_share">ActivityShare</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
